develop/fixing background position mobile chrome

--- a/client/src/Components/Main/Main.scss
+++ b/client/src/Components/Main/Main.scss
@@ -2,14 +2,22 @@
 @import '../../Style/colors';
 
 html,
+body,
 #root,
-body {
+#root > div,
+main {
   height: 100%;
 }
 
-body {
+html {
   background: url('../../Images/BackgroundImages/Basketball.jpg') no-repeat center center fixed;
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+
+  @media (max-width: 450px) {
+    background-attachment: scroll;
+  }
   width: 100%;
 }
 
